--- a/budget-visualiser-ui/src/App.css
+++ b/budget-visualiser-ui/src/App.css
@@ -1,5 +1,16 @@
-.bucket-priority-list{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+body {
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+h1 {
+    text-align: center;
+}
+
+.priorityContainer, hr{
+    margin-top: 6rem;
+}
+
+#createPriorityBtn {
+    float: inline-end;
 }
